# branchless_binary_search

./: CMakeLists.txt  bench.cpp  binary_search.hpp  test.cpp
cmake/: GoogleBenchmark.cmake  GoogleTest.cmake
